# promql-rs

./: Cargo.toml  README.md
src/: ast.rs  function.rs  functions.rs  lib.rs  main.rs  parser.rs  promql.pest  test_parser.rs
src/tests/: mod.rs  paren_expr.rs  parser.rs  string.rs  vector_selector.rs
tests/: duration.rs  number.rs  string.rs
